# MLCopilot-Platform

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260707_ca0e2f97cae9_create_initial_tables.py  20260708_a8d6e9f1c7b2_create_projects_and_members.py  20260708_c3b5d2e7f9a1_create_memory_records_and_links.py  20260709_e9d7d47ebee4_create_uploads_tables.py  20260710_30a5f0243126_enable_pgvector_and_create_embeddings.py  20260711_494a1e13596e_create_conversations_and_messages.py
apps/api/src/mlcopilot/: __init__.py  main.py
apps/api/src/mlcopilot/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py
apps/api/src/mlcopilot/domain/: __init__.py  api_key.py  auth.py  chat.py  embedding.py  errors.py  memory.py  project.py  refresh_token.py  role.py  upload.py  user.py
apps/api/src/mlcopilot/features/: __init__.py
apps/api/src/mlcopilot/features/auth/: __init__.py  api_keys_router.py  deps.py  repository.py  router.py  schemas.py  service.py
apps/api/src/mlcopilot/features/chat/: deps.py  generation.py  prompt.py  retrieval.py  router.py  schemas.py  service.py
apps/api/src/mlcopilot/features/embeddings/: __init__.py  deps.py  router.py  schemas.py  service.py
apps/api/src/mlcopilot/features/health/: __init__.py  deps.py  router.py  schemas.py  service.py
apps/api/src/mlcopilot/features/memory/: __init__.py  deps.py  repository.py  router.py  schemas.py  service.py
apps/api/src/mlcopilot/features/projects/: __init__.py  deps.py  repository.py  router.py  schemas.py  service.py
apps/api/src/mlcopilot/features/uploads/: __init__.py  deps.py  parser.py  repository.py  router.py  schemas.py  service.py  storage.py
apps/api/src/mlcopilot/infrastructure/: __init__.py
apps/api/src/mlcopilot/infrastructure/cache/: __init__.py  redis.py
apps/api/src/mlcopilot/infrastructure/db/: __init__.py  base.py  engine.py  session.py
apps/api/src/mlcopilot/infrastructure/embeddings/: sentence_transformer.py
apps/api/src/mlcopilot/tools/: __init__.py  export_openapi.py  migrate.py
apps/api/src/mlcopilot/workers/: __init__.py  celery_app.py
apps/api/tests/: conftest.py
apps/api/tests/unit/: test_auth_router.py  test_auth_service.py  test_chat.py  test_config.py  test_embeddings.py  test_error_envelope.py  test_health.py  test_openapi_contract.py  test_projects.py  test_repositories.py  test_security.py  test_uploads.py
(+73 files in other folders)
